cilium: Enable `externalTrafficPolicy: Local`
This reverts commit e5765dd06b36c6df64a0236eccea617d7ff0f82d.

--- a/apps/unifi/values.yaml
+++ b/apps/unifi/values.yaml
@@ -53,6 +53,7 @@ app-template:
         lbipam.cilium.io/ips: "192.168.193.2"
         # Cilium v1.15
         io.cilium/lb-ipam-ips: "192.168.193.2"
+      externalTrafficPolicy: Local
       ports:
         http:
           port: *port
