--- a/apps/mosquitto/values.yaml
+++ b/apps/mosquitto/values.yaml
@@ -95,6 +95,7 @@ app-template:
         io.cilium/lb-ipam-ips: "192.168.193.9"
         external-dns.alpha.kubernetes.io/enabled: "true"
         external-dns.alpha.kubernetes.io/hostname: mosquitto.internal.grigri.cloud
+      externalTrafficPolicy: Local
       ports:
         mqtt:
           port: *port
