--- a/system/kanidm/values.yaml
+++ b/system/kanidm/values.yaml
@@ -72,6 +72,7 @@ app-template:
         io.cilium/lb-ipam-ips: "192.168.193.8"
         external-dns.alpha.kubernetes.io/enabled: "true"
         external-dns.alpha.kubernetes.io/hostname: ldaps.idm.internal.grigri.cloud
+      externalTrafficPolicy: Local
       ports:
         ldaps:
           port: 636
