velero: Add new label based quaterly and weekly schedules

--- a/apps/antdroid/values.yaml
+++ b/apps/antdroid/values.yaml
@@ -1,6 +1,8 @@
 app-template:
   controllers:
     antdroid:
+      labels:
+        backup/retain: quaterly
       replicas: 1
       containers:
         nginx:
