--- a/apps/home-assistant/values.yaml
+++ b/apps/home-assistant/values.yaml
@@ -1,6 +1,8 @@
 app-template:
   controllers:
     hass:
+      labels:
+        backup/retain: quaterly
       annotations:
         reloader.stakater.com/auto: "true"
       type: statefulset
