--- a/platform/git/values.yaml
+++ b/platform/git/values.yaml
@@ -2,7 +2,8 @@ gitea:
   image:
     repository: gitea/gitea
     rootless: true
-
+  labels:
+    backup/retain: quaterly
   strategy:
     type: "Recreate"
 
