--- a/apps/antdroid/templates/pvc.yaml
+++ b/apps/antdroid/templates/pvc.yaml
@@ -5,6 +5,7 @@ metadata:
     app.kubernetes.io/instance: antdroid
     app.kubernetes.io/name: antdroid
     backup: antdroid-zfs
+    backup/retain: quaterly
   annotations:
     argocd.argoproj.io/sync-options: Prune=false
   name: antdroid-data
