--- a/apps/bazarr/values.yaml
+++ b/apps/bazarr/values.yaml
@@ -1,6 +1,8 @@
 app-template:
   controllers:
     bazarr:
+      labels:
+        backup/retain: weekly
       type: statefulset
       pod:
         nodeSelector:
