--- a/apps/freshrss/templates/postgresql.yaml
+++ b/apps/freshrss/templates/postgresql.yaml
@@ -2,6 +2,8 @@ apiVersion: "acid.zalan.do/v1"
 kind: postgresql
 metadata:
   name: freshrss-postgres
+  labels:
+    backup/retain: weekly
 spec:
   teamId: freshrss
 
