--- a/apps/home-assistant/templates/pvc.yaml
+++ b/apps/home-assistant/templates/pvc.yaml
@@ -5,6 +5,7 @@ metadata:
     app.kubernetes.io/instance: home-assistant
     app.kubernetes.io/name: home-assistant
     backup: home-assistant-zfs
+    backup/retain: quaterly
   annotations:
     argocd.argoproj.io/sync-options: Prune=false
   name: home-assistant-config
