--- a/apps/mintpsicologia/values.yaml
+++ b/apps/mintpsicologia/values.yaml
@@ -1,6 +1,8 @@
 wordpress:
   image:
     debug: false
+  commonLabels:
+    backup/retain: quaterly
   wordpressUsername: ateneatla
   existingSecret: "wordpress-secret"
   wordpressBlogName: Mintpsicologia
@@ -53,6 +55,8 @@ wordpress:
     primary:
       persistence:
         enabled: true
+        labels:
+          backup/retain: quaterly
         accessModes:
           - ReadWriteOnce
         size: 1Gi
