--- a/apps/mosquitto-tls/templates/pvc.yaml
+++ b/apps/mosquitto-tls/templates/pvc.yaml
@@ -5,6 +5,7 @@ metadata:
     app.kubernetes.io/instance: mosquitto-tls
     app.kubernetes.io/name: mosquitto-tls
     backup: mosquitto-tls-zfs
+    backup/retain: weekly
   annotations:
     argocd.argoproj.io/sync-options: Prune=false
   name: mosquitto-tls
