--- a/apps/navidrome/values.yaml
+++ b/apps/navidrome/values.yaml
@@ -1,6 +1,8 @@
 app-template:
   controllers:
     navidrome:
+      labels:
+        backup/retain: quaterly
       replicas: 1
       # HA is not supported
       strategy: Recreate
