--- a/apps/nextcloud/templates/postgresql.yaml
+++ b/apps/nextcloud/templates/postgresql.yaml
@@ -2,6 +2,8 @@ apiVersion: "acid.zalan.do/v1"
 kind: postgresql
 metadata:
   name: nextcloud-postgres
+  labels:
+    backup/retain: weekly
 spec:
   teamId: nextcloud
 
