--- a/apps/nextcloud/templates/pvc.yaml
+++ b/apps/nextcloud/templates/pvc.yaml
@@ -6,6 +6,7 @@ metadata:
     app.kubernetes.io/instance: nextcloud
     app.kubernetes.io/name: nextcloud
     backup: nextcloud-zfs
+    backup/retain: quaterly
   annotations:
     argocd.argoproj.io/sync-options: Prune=false
   name: nextcloud-nextcloud-data
