--- a/apps/prowlarr/values.yaml
+++ b/apps/prowlarr/values.yaml
@@ -1,6 +1,8 @@
 app-template:
   controllers:
     prowlarr:
+      labels:
+        backup/retain: weekly
       replicas: 1
       # HA is not supported
       strategy: Recreate
