--- a/apps/qbittorrent/templates/pvc.yaml
+++ b/apps/qbittorrent/templates/pvc.yaml
@@ -5,6 +5,7 @@ metadata:
     app.kubernetes.io/instance: qbittorrent
     app.kubernetes.io/name: qbittorrent
     backup: qbittorrent-zfs
+    backup/retain: quaterly
   annotations:
     argocd.argoproj.io/sync-options: Prune=false
   name: config-qbittorrent
