--- a/apps/qbittorrent/values.yaml
+++ b/apps/qbittorrent/values.yaml
@@ -1,6 +1,8 @@
 app-template:
   controllers:
     qbittorrent:
+      labels:
+        backup/retain: quaterly
       containers:
         qbittorrent:
           image:
