--- a/apps/radarr/templates/pvc.yaml
+++ b/apps/radarr/templates/pvc.yaml
@@ -5,6 +5,7 @@ metadata:
     app.kubernetes.io/instance: radarr
     app.kubernetes.io/name: radarr
     backup: radarr-zfs
+    backup/retain: quaterly
   annotations:
     argocd.argoproj.io/sync-options: Prune=false
   name: config-radarr
