--- a/apps/sonarr/templates/pvc.yaml
+++ b/apps/sonarr/templates/pvc.yaml
@@ -5,6 +5,7 @@ metadata:
     app.kubernetes.io/instance: sonarr
     app.kubernetes.io/name: sonarr
     backup: sonarr-zfs
+    backup/retain: quaterly
   annotations:
     argocd.argoproj.io/sync-options: Prune=false
   name: config-sonarr
