--- a/apps/sonarr/values.yaml
+++ b/apps/sonarr/values.yaml
@@ -1,6 +1,8 @@
 app-template:
   controllers:
     sonarr:
+      labels:
+        backup/retain: quaterly
       type: statefulset
       containers:
         sonarr:
