--- a/apps/telegram-bot/values.yaml
+++ b/apps/telegram-bot/values.yaml
@@ -1,6 +1,8 @@
 app-template:
   controllers:
     telegram-bot:
+      labels:
+        backup/retain: quaterly
       replicas: 2
       containers:
         telegram-bot:
