--- a/apps/transcoder/templates/postgresql.yaml
+++ b/apps/transcoder/templates/postgresql.yaml
@@ -2,6 +2,8 @@ apiVersion: "acid.zalan.do/v1"
 kind: postgresql
 metadata:
   name: transcoder-postgres
+  labels:
+    backup/retain: quaterly
 spec:
   teamId: transcoder
   numberOfInstances: 1
