--- a/apps/unifi/templates/pvc.yaml
+++ b/apps/unifi/templates/pvc.yaml
@@ -5,6 +5,7 @@ metadata:
     app.kubernetes.io/instance: unifi
     app.kubernetes.io/name: unifi
     backup: unifi-zfs
+    backup/retain: quaterly
   annotations:
     argocd.argoproj.io/sync-options: Prune=false
   name: config-unifi
