--- a/apps/wallabag/templates/postgresql.yaml
+++ b/apps/wallabag/templates/postgresql.yaml
@@ -2,6 +2,8 @@ apiVersion: "acid.zalan.do/v1"
 kind: postgresql
 metadata:
   name: wallabag-postgres
+  labels:
+    backup/retain: weekly
 spec:
   teamId: wallabag
 
