--- a/system/kanidm/templates/pvc.yaml
+++ b/system/kanidm/templates/pvc.yaml
@@ -5,6 +5,7 @@ metadata:
     app.kubernetes.io/instance: kanidm
     app.kubernetes.io/name: kanidm
     backup: kanidm-zfs
+    backup/retain: quaterly
   annotations:
     argocd.argoproj.io/sync-options: Prune=false
   name: kanidm-data-0
