--- a/system/kanidm/values.yaml
+++ b/system/kanidm/values.yaml
@@ -1,6 +1,8 @@
 app-template:
   controllers:
     kanidmd:
+      labels:
+        backup/retain: quaterly
       annotations:
         configmap.reloader.stakater.com/reload: kanidm-kanidmd-config
         secret.reloader.stakater.com/reload: idm-external-tls-certificate
