--- a/apps/jellyfin/values.yaml
+++ b/apps/jellyfin/values.yaml
@@ -15,7 +15,7 @@ app-template:
               enabled: true
               custom: true
               spec:
-                httpGet:
+                httpGet: &httpGet
                   path: /health
                   port: &port 8096
                 initialDelaySeconds: 0
@@ -27,9 +27,7 @@ app-template:
               enabled: true
               custom: true
               spec:
-                httpGet:
-                  path: /health
-                  port: &port 8096
+                httpGet: *httpGet
                 failureThreshold: 30
                 periodSeconds: 10
           env:
