qbittorrent: Fix port probe definition

--- a/apps/qbittorrent/values.yaml
+++ b/apps/qbittorrent/values.yaml
@@ -24,6 +24,7 @@ app-template:
           probes:
             liveness: &probe
               enabled: true
+              custom: true
               spec:
                 failureThreshold: 3
                 periodSeconds: 10
