--- a/metal/inventory/hosts.ini
+++ b/metal/inventory/hosts.ini
@@ -2,22 +2,25 @@
 grigri
 
 [kube_node:children]
+amd64_node
 odroid_c4
 odroid_hc4
-rock64
-amd64_node
+# rock64
 
 [arm:children]
 odroid_c4
 odroid_hc4
-rock64
+# rock64
 
 [amd64_node]
-k8s-amd64-1
+prusik
 
 [amd64]
-k8s-amd64-1
+prusik
 grigri
+
+[ipmi]
+prusik-ipmi
 
 [odroid_c4]
 k8s-odroid-c4-1
@@ -26,13 +29,17 @@ k8s-odroid-c4-2
 [odroid_hc4]
 k8s-odroid-hc4-3
 
-[rock64]
-k8s-rock64-1
-k8s-rock64-2 prepare_max_cpu_freq=816000
-k8s-rock64-3 prepare_max_cpu_freq=816000
-k8s-rock64-4 prepare_max_cpu_freq=816000
-k8s-rock64-5 prepare_max_cpu_freq=1008000
-k8s-rock64-6 prepare_max_cpu_freq=1200000
+# [rock64]
+# k8s-rock64-1
+# k8s-rock64-2 prepare_max_cpu_freq=816000
+# k8s-rock64-3 prepare_max_cpu_freq=816000
+# k8s-rock64-4 prepare_max_cpu_freq=816000
+# k8s-rock64-5 prepare_max_cpu_freq=1008000
+# k8s-rock64-6 prepare_max_cpu_freq=1200000
 
 [nvidia]
-k8s-amd64-1
+prusik
+
+[k3s_cluster:children]
+kube_control_plane
+kube_node
