--- a/metal/playbooks/install/cluster.yml
+++ b/metal/playbooks/install/cluster.yml
@@ -1,5 +1,5 @@
 - name: Create Kubernetes cluster
-  hosts: all
+  hosts: k3s_cluster
   serial: "{{ serial | default('100%') }}"
   vars:
     ansible_path: "{{ playbook_dir }}/../.."
