--- a/metal/playbooks/install/prepare.yml
+++ b/metal/playbooks/install/prepare.yml
@@ -23,3 +23,8 @@
     - name: nvidia-container-runtime
       tags:
         - nvidia-container-runtime
+
+- name: Setup pikvm
+  hosts: prusik-ipmi
+  roles:
+    - pikvm
