--- a/metal/roles/setup/tasks/notifications.yml
+++ b/metal/roles/setup/tasks/notifications.yml
@@ -10,8 +10,8 @@
     update_cache: true
 
 - name: notifications | Configure postfix
-  copy:
-    src: postfix_main.cf
+  template:
+    src: postfix_main.cf.j2
     dest: /etc/postfix/main.cf
     mode: "0644"
   notify: restart postfix
@@ -29,20 +29,20 @@
   tags:
     - postfix
 
-- name: notifications | Add grigri-service script
+- name: notifications | Add telegram-notification script
   template:
-    src: grigri-service.j2
-    dest: /usr/local/bin/grigri-service
+    src: telegram-notification.j2
+    dest: /usr/local/bin/telegram-notification
     mode: "0755"
 
-- name: notifications | Add grigri-startup service
+- name: notifications | Add telegram-notification service
   copy:
-    src: grigri-startup.service
-    dest: /etc/systemd/system/grigri-startup.service
+    src: telegram-notification.service
+    dest: /etc/systemd/system/telegram-notification.service
     mode: "0644"
 
-- name: notifications | Enable grigri-startup service
+- name: notifications | Enable telegram-notification service
   systemd:
-    name: grigri-startup
+    name: telegram-notification
     daemon_reload: true
     enabled: true
