--- a/apps/esphome/config/smart-plug-v2-terrace.yaml
+++ b/apps/esphome/config/smart-plug-v2-terrace.yaml
@@ -1,7 +1,7 @@
 substitutions:
-  device_name: "athom-smart-plug-v2-2"
-  friendly_name: "Athom Smart Plug V2 2"
-  project_name: "athom.smart-plug-v2-2"
+  device_name: "smart-plug-v2-terrace"
+  friendly_name: "Smart Plug V2 Terrace"
+  project_name: "athom.smart-plug-v2-terrace"
   project_version: "1.1"
   relay_restore_mode: RESTORE_DEFAULT_OFF
 
