monitoring: Add thanosrulers

--- a/system/monitoring/kustomization.yaml
+++ b/system/monitoring/kustomization.yaml
@@ -69,3 +69,12 @@ patches:
       kind: CustomResourceDefinition
       name: prometheuses.monitoring.coreos.com
       version: v1
+  - patch: |-
+      - op: add
+        path: "/metadata/annotations/argocd.argoproj.io~1sync-options"
+        value: "Replace=true"
+    target:
+      group: apiextensions.k8s.io
+      kind: CustomResourceDefinition
+      name: thanosrulers.monitoring.coreos.com
+      version: v1
