pikvm: Adjust fan idle speed and min temp

--- a/metal/roles/pikvm/files/kvmd-fan.service
+++ b/metal/roles/pikvm/files/kvmd-fan.service
@@ -6,8 +6,7 @@ After=systemd-modules-load.service
 Type=simple
 Restart=always
 RestartSec=3
-EnvironmentFile=-/etc/conf.d/kvmd-fan
-ExecStart=/usr/bin/kvmd-fan --config=?/etc/kvmd/fan.ini $KVMD_FAN_ARGS
+ExecStart=/usr/bin/kvmd-fan
 TimeoutStopSec=3
 
 [Install]
