zfs-exporter: Add prusik to scrape

--- a/system/zfs-exporter/templates/scrape-config.yaml
+++ b/system/zfs-exporter/templates/scrape-config.yaml
@@ -8,5 +8,6 @@ spec:
   staticConfigs:
     - targets:
         - grigri.grigri:9134
+        - prusik.grigri:9134
   scrapeInterval: 30s
   scrapeTimeout: 3s
