prusik: Add prusik to storage class

--- a/system/zfs-localpv/templates/storage-class-openebs-zfspv.yaml
+++ b/system/zfs-localpv/templates/storage-class-openebs-zfspv.yaml
@@ -15,5 +15,6 @@ allowedTopologies:
       - key: kubernetes.io/hostname
         values:
           - grigri
+          - prusik
 # with this we will take into account the k8s scheduler instead of CapacityWeighted (default) or VolumeWeighted.
 volumeBindingMode: WaitForFirstConsumer
