hass: Change to distil-whisper

--- a/apps/home-assistant/values.yaml
+++ b/apps/home-assistant/values.yaml
@@ -111,7 +111,7 @@ app-template:
             tag: 2.1.0
           args:
             - --model
-            - large-v3
+            - marianbasti/distil-whisper-large-v3-es
             - --language
             - es
             - --device
