--- a/apps/home-assistant/values.yaml
+++ b/apps/home-assistant/values.yaml
@@ -111,7 +111,7 @@ app-template:
             tag: 2.1.0
           args:
             - --model
-            - marianbasti/distil-whisper-large-v3-es
+            - distil-large-v2
             - --language
             - es
             - --device
