--- a/apps/home-assistant/values.yaml
+++ b/apps/home-assistant/values.yaml
@@ -107,8 +107,8 @@ app-template:
       containers:
         whisper:
           image:
-            repository: rhasspy/wyoming-whisper
-            tag: 2.1.0
+            repository: pando85/wyoming-whisper
+            tag: 2.0.0
           args:
             - --model
             - Systran/faster-distil-whisper-large-v3
