hass: Change to large-v3 model
Distil model is just english

--- a/apps/home-assistant/values.yaml
+++ b/apps/home-assistant/values.yaml
@@ -111,7 +111,7 @@ app-template:
             tag: 2.0.0
           args:
             - --model
-            - Systran/faster-distil-whisper-large-v3
+            - large-v3
             - --language
             - es
             - --device
