stump: Fix nodeSelector key

--- a/apps/stump/values.yaml
+++ b/apps/stump/values.yaml
@@ -97,7 +97,7 @@ app-template:
       fsGroupChangePolicy: "OnRootMismatch"
 
     nodeSelector:
-      name: prusik
+      kubernetes.io/hostname: prusik
 
   persistence:
     config:
