stump: Remove PUID and GUID
It tries to execute a chown

--- a/apps/stump/values.yaml
+++ b/apps/stump/values.yaml
@@ -31,11 +31,10 @@ app-template:
                 failureThreshold: 30
                 periodSeconds: 10
           env:
-            PUID: "995"
-            PGID: "501"
             STUMP_IN_DOCKER: "false"
             STUMP_CONFIG_DIR: /config
             STUMP_VERBOSITY: info
+            TZ: Europe/Madrid
 
           resources:
             requests:
